<resources>
    <string name="app_name">Русские пароли</string>
    <string name="help_text">Здесь вы можете посмотреть свой пароль, созданный по методу "русское слово в английской раскладке"</string>
    <string name="clipboardTitle">Пароль</string>
    <string name="message_copy">Скопировано в буфер обмена</string>
    <string-array name="russian">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
    </string-array>

    <string-array name="english">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
    </string-array>

    <string-array name="letters">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
    </string-array>

    <string-array name="digits">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="special_symbols">
        <item>~</item>
        <item>!</item>
        <item>/@</item>
        <item>#</item>
        <item>$</item>
        <item>%</item>
        <item>^</item>
        <item>*</item>
        <item>(</item>
        <item>)</item>
        <item>_</item>
        <item>-</item>
        <item>=</item>
        <item>+</item>
        <item>[</item>
        <item>]</item>
        <item>{</item>
        <item>}</item>
        <item>:</item>
        <item>;</item>
        <item>"</item>
        <item>.</item>
        <item>/?</item>
        <item>№</item>
    </string-array>

    <string name="quality_hint">(качество)</string>
    <string name="check_upper">Заглавные</string>
    <string name="generate_password">Сгенерируйте новый пароль ему на замену</string>
    <string name="numbers">Цифры</string>
    <string name="specSymbols">Спецсимволы</string>
    <string name="Title2">Password</string>
    <string name="generate">Генерировать</string>

    <string-array name="qualities">
        <item>@string/quality_hint</item>
        <item>ужасный</item>
        <item>плохой</item>
        <item>плохой</item>
        <item>слабый</item>
        <item>нормальный</item>
        <item>средний</item>
        <item>выше среднего</item>
        <item>хороший</item>
        <item>очень хороший</item>
        <item>отличный</item>
    </string-array>

    <plurals name="length">
        <item quantity="one">%1$d символ</item>
        <item quantity="two">%1$d символа</item>
        <item quantity="few">%1$d символа</item>
        <item quantity="many">%1$d символов</item>
        <item quantity="other">%1$d символов</item>
    </plurals>

</resources>
